# perftest

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Makefile  Makefile.am  README  README_ROCm  README_ROCm.md  README_sparc  atomic_bw.c  atomic_lat.c  autogen.sh  clock_test.c  config.cmake.h.in  configure.ac  encrypt_credentials.c  gen_data_enc_key.c  get_clock.c  get_clock.h  getopt_win.c  multicast_resources.c  multicast_resources.h  perftest.spec  perftest_communication.c  perftest_communication.h  perftest_parameters.c  perftest_parameters.h  perftest_resources.c  perftest_resources.h  raw_ethernet_send_bw.c  rdma_bw.c  rdma_lat.c  read_bw.c  read_lat.c  run_perftest_loopback  run_perftest_multi_devices  runme  send_bw.c  send_lat.c  (+3 more)
.github/workflows/: build.yml  ubuntu24_04_cuda12_9.yaml  ubuntu24_04_cuda13_1.yaml
debian/: changelog  changelog_update.sh  control  perftest.install  perftest.substvars  rules
debian/tests/: control  rxe_loopback
man/: perftest.1
src/: atomic_bw.c  atomic_lat.c  clock_test.c  cuda_kernels.cu  cuda_loader.c  cuda_loader.h  cuda_memory.c  cuda_memory.h  cuda_utils.cu  cuda_validation.h  dm_memory.c  dm_memory.h  get_clock.c  get_clock.h  get_clock_win.c  get_clock_win.h  getopt_win.c  hl_memory.c  hl_memory.h  host_memory.c  host_memory.h  host_validation.c  host_validation.h  ib_device_memory.c  ib_device_memory.h  memory.h  mlu_memory.c  mlu_memory.h  mlx5_devx.h  mmap_memory.c  mmap_memory.h  multicast_resources.c  multicast_resources.h  neuron_memory.c  neuron_memory.h  opencl_memory.c  opencl_memory.h  perftest_communication.c  perftest_communication.h  perftest_counters.c  (+20 more)
